<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding"
    android:orientation="vertical"
    tools:context="com.example.erosa.courseracontacto.DatosActivity">
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmar_titulo"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_padding"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        />
    <TextView
        android:id="@+id/tv_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Lorena Hernandez Lopez"
        android:padding="@dimen/textview_padding"
        android:layout_marginTop="18dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        />
    <TextView
        android:id="@+id/tv_nacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="12/12/1387"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:padding="@dimen/textview_padding"/>

    <TextView
        android:id="@+id/tv_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="55553333"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:padding="@dimen/textview_padding"/>
    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="lorena@gmail.com"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
        android:padding="@dimen/textview_padding"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_descripcion_prefix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcion"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:padding="@dimen/textview_padding"/>
        <TextView
            android:id="@+id/tv_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Conoci a Lorena en el Restaurant de comida italizada"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:padding="@dimen/textview_padding"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_editar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/ButtonStyle"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dp"
        android:paddingLeft="36dp"
        android:paddingRight="36dp"
        android:text="@string/editar_datos"/>
</LinearLayout>
